--- a/app/index.html
+++ b/app/index.html
@@ -13,10 +13,11 @@
   <!-- endbuild -->
 </head>
 <body>
+sdfsdfds
 <div class="wrap">
   <header class="header">
   </header>
-
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni obcaecati molestiae pariatur, officiis cum doloremque non adipisci voluptatum alias laboriosam illum cumque quo perspiciatis sint delectus sed, suscipit laborum a.
   <main class="main">
   </main>
 
